<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ Copyright (c) 2010 Patrick Woodworth
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you
  ~ may not use this file except in compliance with the License. You may
  ~ obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
  ~ implied. See the License for the specific language governing
  ~ permissions and limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/morse_ime_settings"
                  android:key="morse_ime_settings">

  <org.emergent.android.morseime.HelpPreference
      android:key="foo_bar"
      android:title="@string/help"
      android:summary="@string/help_summary"
      android:persistent="false"
      />

  <org.emergent.android.morseime.SliderPreference
      android:key="words_per_minute"
      android:title="Words Per Minute"
      android:summary="foo"
      android:dialogMessage="Words per minute"
      android:defaultValue="10"
      android:text="wpm"
      android:max="50"
      android:persistent="true"
      min="1"
      />

  <CheckBoxPreference
      android:key="auto_space_on"
      android:title="@string/auto_space"
      android:persistent="true"
      />

  <CheckBoxPreference
      android:key="vibrate_on"
      android:title="@string/vibrate_on_keypress"
      android:persistent="true"
      />

  <CheckBoxPreference
      android:key="sound_on"
      android:title="@string/sound_on_keypress"
      android:persistent="true"
      />

  <CheckBoxPreference
      android:key="auto_cap"
      android:title="@string/auto_cap"
      android:persistent="true"
      android:defaultValue="true"
      />

  <PreferenceCategory
      android:title="@string/prediction_category"
      android:key="prediction_settings">

    <CheckBoxPreference
        android:key="quick_fixes"
        android:title="@string/quick_fixes"
        android:summary="@string/quick_fixes_summary"
        android:persistent="true"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="show_suggestions"
        android:title="@string/show_suggestions"
        android:summary="@string/show_suggestions_summary"
        android:persistent="true"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="auto_complete"
        android:title="@string/auto_complete"
        android:summary="@string/auto_complete_summary"
        android:persistent="true"
        android:defaultValue="@bool/enable_autocorrect"
        android:dependency="show_suggestions"
        />

  </PreferenceCategory>
</PreferenceScreen>
